adding Ecomm App in phase2

--- a/Ecommerce App/index.html
+++ b/Ecommerce App/index.html
@@ -33,7 +33,7 @@
             </a>
           </li>
           <li class="list-item-inline">
-            <a href="/" class="link cursor">
+            <a href="./cart.html" class="link cursor">
               <span class="nav-icon material-icons-outlined">
                 shopping_cart
               </span>
@@ -43,8 +43,35 @@
       </nav>
     </header>
 
-    
-    <div class="products-page d-flex wrap gap" id="products"></div>
+    <div class="products-page d-flex">
+      <aside class="side-bar">
+          <h3 class="heading-3">Filters</h3>
+          <div class="filter-container">
+              <h3 class="heading-3">Ratings</h3>
+              <div class="d-flex align-center gap">
+                  <input data-rating="4" id="rating-4" class="radio" type="radio" name="rating">
+                  <label data-rating="4" for="rating-4" class="label">4 stars & above</label>
+              </div>
+              <div class="d-flex align-center gap">
+                  <input data-rating="3" id="rating-3" class="radio" type="radio" name="rating">
+                  <label data-rating="3" for="rating-3" class="label">3 stars & above</label>
+              </div>
+              <div class="d-flex align-center gap">
+                  <input data-rating="2" id="rating-2" class="radio" type="radio" name="rating">
+                  <label data-rating="2" for="rating-2" class="label">2 stars & above</label>
+              </div>
+              <div class="d-flex align-center gap">
+                  <input data-rating="1" id="rating-1" class="radio" type="radio" name="rating">
+                  <label data-rating="1" for="rating-1" class="label">1 stars & above</label>
+              </div>
+          </div>
+      </aside>
+
+      <div class="product-container d-flex wrap gap" id="products"></div>
+  </div>
+
+
+    <!-- <div class="products-page d-flex wrap gap" id="products"></div> -->
 
     <!--  for reference HTML into JS 
     <div class="card card-vertical d-flex direction-column relative shadow">
