--- a/MovieApp/index.html
+++ b/MovieApp/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header class="header">
-        <h1 class="heading-1">Elearning Platform</h1>
+        <h1 class="heading-1">Movie Platform</h1>
         <div class="options">
             <div class="search-container">
                 <input class="input" placeholder="Search a Movie | Director | Actor" >
