--- a/Notes_App/index.html
+++ b/Notes_App/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home | NoteIt</title>
+    <title>Home | Note App</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
