modified index file

--- a/Ecommerce App/index.html
+++ b/Ecommerce App/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Flixcart Official store</title>
+    <title>Flixcart store redefined</title>
     <meta name="author" description="Md Arif" />
     <link rel="stylesheet" href="./style.css" />
   </head>
